# gazelle_cabal

./: .hie-bios  README.md  shell.nix
cabalscan/: BUILD.bazel
cabalscan/src/CabalScan/: RuleGenerator.hs  Rules.hs
example/package-b/: package-b.cabal
gazelle_cabal/: dependency_resolution.go  lang.go
