cabal-version:      2.4
name:               package-b
version:            0.1.0.0

author:             Facundo Domínguez
maintainer:         facundo.dominguez@tweag.io

extra-source-files: CHANGELOG.md
data-files: CHANGELOG.md

library base
    exposed-modules:
      Sublibrary.SLib
    build-depends:
      base
    hs-source-dirs: slib
    default-language: Haskell2010

library
    exposed-modules:
      PackageB.Exposed.A
    other-modules:
      PackageB.Other.B
    build-depends:
      base,
      package-a,
      void
    default-extensions: ScopedTypeVariables
    hs-source-dirs: src
    extra-libraries: m
    default-language: Haskell2010
